// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BusEstimateComponent /> does a snapshot 1`] = `
<BusEstimateComponent
  api={
    Object {
      "requestTimeEstimate": [Function],
    }
  }
>
  <div
    className="timeTable"
  >
    <div
      className="innerText"
    >
      <br />
      <br />
      <br />
      <br />
    </div>
    <Button
      active={false}
      disabled={false}
      id="estimateButton"
      onClick={[Function]}
      type="button"
      variant="light"
    >
      <button
        className="btn btn-light"
        disabled={false}
        id="estimateButton"
        onClick={[Function]}
        type="button"
      >
        Get Estimate
      </button>
    </Button>
  </div>
</BusEstimateComponent>
`;

exports[`<BusEstimateComponent /> should update text when clicking on button 1`] = `
<BusEstimateComponent
  api={
    Object {
      "requestTimeEstimate": [Function],
    }
  }
>
  <div
    className="timeTable"
  >
    <div
      className="innerText"
    >
      ROUTE: 20
      <br />
      STOP: Madison & Jefferson
      <br />
      DIRECTION: Westbound
      <br />
      ARRIVING AT: 12:02
      <br />
    </div>
    <Button
      active={false}
      disabled={false}
      id="estimateButton"
      onClick={[Function]}
      type="button"
      variant="light"
    >
      <button
        className="btn btn-light"
        disabled={false}
        id="estimateButton"
        onClick={[Function]}
        type="button"
      >
        Get Estimate
      </button>
    </Button>
  </div>
</BusEstimateComponent>
`;
